@@ -1,7 +1,12 @@
 Revision history for Perl extension UPnP.
 
-2008-05-01 Satoshi Konno <skonno@cybergarage.org>
+2008-05-08 Satoshi Konno <skonno@cybergarage.org>
         * v1.2.2
+
+2008-05-07 Christian KrauBe
+	* Added Net::UPnP::GW::gettotalbytessent().
+
+2008-05-01 Satoshi Konno <skonno@cybergarage.org>
 	* Added Net::UPnP::GW::gettotalbytesrecieved().
 	* Added a sample to use Net::UPnP::GW::gettotalbytesrecieved() into exsample/upnpgwdump.pl.
 
